# face

./: .gitignore  README.md  TRAINING.md  USAGE.md  anti_spoofing.py  check_dataset.py  config.py  data_loader.py  download_and_organize_data.py  download_datasets.py  download_video_datasets.py  embedding_augmentation.py  gpu_config.py  install_rclone.sh  liveness.py  main.py  model.py  preprocessing.py  pyproject.toml  similarity.py  test_app.html  test_json_parsing.py  tflite_inference.py  train.py  train_anti_spoofing.py  unzip_dataset.sh  user_profile.py  verify_label_mapping.py  verify_pipeline.py
data/profiles/: profiles.db
logs/liveness/train/: events.out.tfevents.1764394789.adityas-MacBook-Air.local.55048.0.v2  events.out.tfevents.1764394945.adityas-MacBook-Air.local.55048.2.v2  events.out.tfevents.1764395080.adityas-MacBook-Air.local.55451.0.v2  events.out.tfevents.1764395246.adityas-MacBook-Air.local.55451.2.v2  events.out.tfevents.1764395625.adityas-MacBook-Air.local.56425.0.v2  events.out.tfevents.1764399043.adityas-MacBook-Air.local.56425.2.v2
logs/liveness/validation/: events.out.tfevents.1764394801.adityas-MacBook-Air.local.55048.1.v2  events.out.tfevents.1764394996.adityas-MacBook-Air.local.55048.3.v2  events.out.tfevents.1764395093.adityas-MacBook-Air.local.55451.1.v2  events.out.tfevents.1764395305.adityas-MacBook-Air.local.55451.3.v2  events.out.tfevents.1764396125.adityas-MacBook-Air.local.56425.1.v2  events.out.tfevents.1764402893.adityas-MacBook-Air.local.56425.3.v2
